@@ -23,6 +23,7 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Collections;
 import java.util.concurrent.Callable;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -599,7 +600,15 @@ public final class SolrCore {
     }
     return component;
   }
-  
+
+  /**
+   * Accessor for all the Search Components
+   * @return An unmodifiable Map of Search Components
+   */
+  public Map<String, SearchComponent> getSearchComponents() {
+    return Collections.unmodifiableMap(searchComponents);
+  }
+
   ////////////////////////////////////////////////////////////////////////////////
   // Update Handler
   ////////////////////////////////////////////////////////////////////////////////
